Fixed navBar transparency on scroll, fixed alignment of Skills menu

--- a/css/app.css
+++ b/css/app.css
@@ -93,10 +93,9 @@ body {
 */
 
 
-.scrolled{
-	
-   background-color: #100324;
-   border-color: #100324;
+.navBar.scrolled{
+   background: #081947;
+   transition-duration: 500ms;
 }
 #mainNavBar .nav-link{
 	color: white;
